--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+html{
+    font-family: 'Lato', sans-serif;
+}
+
 .lateral{
     background-color: #56B3AB;
     bottom: 0;
@@ -26,7 +30,7 @@
 }
 .perfil__nombres{
     color: #fff;
-    font-size: 20px;
+    font-size: 25px;
     margin-left: .5em;
     width: 250px;
 }
@@ -61,4 +65,40 @@ background-color: #0F6A62;
     font-size: 12px;
     text-transform: uppercase;
     padding: .5em;
+}
+
+.habilidad__proyecto {
+    background-color: #29597C;
+    color: #fff;
+    display: inline-block;
+    font-size: 12px;
+    text-transform: uppercase;
+    padding: .5em;
+}
+
+/*Proyectos*/
+
+.proyectos{
+    margin-left: 350px;
+    padding: 1em;
+    display:table;
+}
+
+.proyecto{
+    display:table-cell;
+    padding: 1em;
+    width: 50%;
+}
+
+.proyecto_imagen{
+    width: 100%;
+}
+
+.proyecto_titulo{
+    color: #29597C;
+    font-size: 18px;
+}
+
+.proyecto_descripcion{
+    color: #797D7F;
 }
